--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
         <activity
+            android:name=".view.admin.fbl.ActivityFbl"
+            android:exported="false" />
+        <activity
+            android:name=".view.admin.masukan.ActivityMasukan"
+            android:exported="false" />
+        <activity
+            android:name=".view.admin.stok.ActivityStok"
+            android:exported="false" />
+        <activity
             android:name=".view.admin.absensi.ActivityAbsensiDetail"
             android:exported="false" />
         <activity
