--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
         <activity
+            android:name=".view.admin.survey.ActivitySurveyAwal"
+            android:exported="false" />
+        <activity
+            android:name=".view.admin.survey.ActivitySurveyList"
+            android:exported="false" />
+        <activity
             android:name=".view.admin.fbl.ActivityFbl"
             android:exported="false" />
         <activity
