--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,18 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
         <activity
+            android:name=".view.sales.sp.ActivitySpList"
+            android:exported="false" />
+        <activity
+            android:name=".view.admin.sp.ActivitySpDetail"
+            android:exported="false" />
+        <activity
+            android:name=".view.admin.sp.ActivitySpList"
+            android:exported="false" />
+        <activity
+            android:name=".view.staff.sp.ActivitySpCust"
+            android:exported="false" />
+        <activity
             android:name=".view.staff.sp.ActivitySp"
             android:exported="false" />
         <activity
